--- a/slides/CPA_2020_small_steps.html
+++ b/slides/CPA_2020_small_steps.html
@@ -26,7 +26,7 @@ Making one's own research reproducible can often involve learning new and comple
 My advice is to use the resources listed here and either get your lab mates or a small study group and try to work through the examples.
 
 We learn by doing, but the the doing part can be very hard. Don't give up. Keep pushing!
-
+&lt;link href="/extra.css" rel="stylesheet" type="text/css"&gt;
 ---
 class: inverse
 
